--- a/Ahmad.html
+++ b/Ahmad.html
@@ -104,7 +104,7 @@
       </div>
     </section>
     <section class="u-clearfix u-white u-section-2" id="sec-0166">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <div class="u-clearfix u-gutter-10 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout" style="">
             <div class="u-layout-row" style="">
@@ -146,7 +146,7 @@
       </div>
     </section>
     <section class="u-clearfix u-white u-section-4" id="carousel_f552">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-clearfix u-expanded-width u-gutter-10 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout" style="">
             <div class="u-layout-row" style="">
@@ -168,7 +168,7 @@
       </div>
     </section>
     <section class="u-clearfix u-white u-section-5" id="carousel_29f1">
-      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">skills</h1>
         <div class="u-clearfix u-expanded-width u-gutter-10 u-layout-wrap u-layout-wrap-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
           <div class="u-gutter-0 u-layout">
@@ -369,8 +369,8 @@
       </div>
     </section>
     <section class="u-clearfix u-section-6" id="carousel_c90a">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-align-center u-text u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">Language Skills</h1>
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+        <h1 class="u-align-center u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000">Language Skills</h1>
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
           <div class="u-layout">
             <div class="u-layout-col">
@@ -578,15 +578,33 @@
 
 @media (max-width: 575px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 121px;
+    min-height: 152px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-1 {
+    padding-bottom: 10px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 20px;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 20px;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
-    min-height: 15px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-2 {
+    padding: 30px;
   }
 }</style></section>
   
