--- a/Ahmad.html
+++ b/Ahmad.html
@@ -483,7 +483,7 @@
             <div class="u-layout-col">
               <div class="u-size-30">
                 <div class="u-layout-col">
-                  <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-1">
+                  <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-1" data-animation-name="customAnimationIn" data-animation-duration="1000">
                     <div class="u-container-layout u-container-layout-1">
                       <h1 class="u-align-center u-text u-text-default u-text-1">Contact me</h1>
                     </div>
@@ -492,7 +492,7 @@
               </div>
               <div class="u-size-30">
                 <div class="u-layout-row">
-                  <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-2">
+                  <div class="u-container-style u-layout-cell u-size-60 u-layout-cell-2" data-animation-name="customAnimationIn" data-animation-duration="1000">
                     <div class="u-container-layout u-valign-top u-container-layout-2">
                       <div class="u-form u-form-1">
                         <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
@@ -676,15 +676,33 @@
 
 @media (max-width: 575px) {
   .u-cookies-consent .u-sheet-1 {
-    min-height: 121px;
+    min-height: 152px;
   }
 
   .u-cookies-consent .u-layout-cell-1 {
-    min-height: 100px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-1 {
+    padding-bottom: 10px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .u-cookies-consent .u-text-1 {
+    margin-right: 20px;
+  }
+
+  .u-cookies-consent .u-text-2 {
+    margin-right: 20px;
   }
 
   .u-cookies-consent .u-layout-cell-2 {
-    min-height: 15px;
+    min-height: 152px;
+  }
+
+  .u-cookies-consent .u-container-layout-2 {
+    padding: 30px;
   }
 }</style></section>
   
